* Menu action "Open Branch": added finding renamed branch files.
* Added finding of all existing databases in the working folder.

Internal changes:
* Redesigned task management system.
* Significant optimization of the Data Model creation process (x10 faster for Large lists).
* Multiple optimizations of basic functions.

Removed:
* "Colored Items" setting. Now is always on.
* Menu Setting for display the number of updatable items.

---
Veretino 0.4.5
* Improved handling of damaged and unreadable files.

---
Veretino 0.4.4
* Implemented skipping of queued items that became unavailable during the process.
* Window Title: fixed premature "✓ verified" mark when resuming the process.
* Minor UI improvements and performance optimizations.

---
Veretino 0.4.3
* Fixed a missed database save that occurred when there was unsaved data and a drag-and-drop event from the file system, or opening a folder from the menu.
* Fixed a silent crash (occurred when closing the app with a setted database) on Qt6.
* Added CMake build system.
* Improved appearance of the "About box".

---
Veretino 0.4.2
* Fixed Qt6 builds.

---
Veretino 0.4.1
* Redesigned and improved Status Bar.
* Added the ability to analyze the contents of a database by type and size, similar to how the "Folder Contents" do.
* The window title now displays some info about the database. A hint will also appear if any Mismatches are found during the verification process.

Fixes and Minor Enhancements:
* Improved keyboard operation in the Filter Creation Dialog.
* Now the process cancelation prompt disappears automatically if it is no longer relevant.
* Improved icons, titles, and behavior of some dialog boxes.
* Fixed unwanted behavior when pressing the main Button or some keys during a silent process (big data).

---
Veretino 0.4.0