@@ -19,15 +19,11 @@ DialogSettings::DialogSettings(Settings *settings, QWidget *parent) :
     setWindowIcon(IconProvider::appIcon());
 
     ui->buttonBox->button(QDialogButtonBox::RestoreDefaults)->setText(QStringLiteral(u"Defaults"));
-    ui->comboBoxPresets->addItems(filterPresetsList);
 
     connect(ui->buttonBox->button(QDialogButtonBox::RestoreDefaults), &QPushButton::clicked, this, &DialogSettings::restoreDefaults);
     connect(ui->rbExtVer, &QRadioButton::toggled, this, &DialogSettings::updateLabelDatabaseFilename);
     connect(ui->cbAddFolderName, &QCheckBox::toggled, this, &DialogSettings::updateLabelDatabaseFilename);
     connect(ui->inputJsonFileNamePrefix, &QLineEdit::textEdited, this, &DialogSettings::updateLabelDatabaseFilename);
-    connect(ui->comboBoxPresets, qOverload<int>(&QComboBox::activated), this, &DialogSettings::setFilterPreset);
-    connect(ui->inputExtensions, &QLineEdit::textEdited, this, qOverload<>(&DialogSettings::setComboBoxFpIndex));
-    connect(ui->rbInclude, &QRadioButton::toggled, this, &DialogSettings::handleFilterMode);
 
     ui->cbSaveVerificationDateTime->setToolTip(QStringLiteral(u"Checked: after successful verification\n"
                                                  "(if all files exist and match the stored checksums),\n"
@@ -42,7 +38,7 @@ DialogSettings::DialogSettings(Settings *settings, QWidget *parent) :
     const IconProvider icons(palette());
     ui->tabWidget->setTabIcon(TabMain, icons.icon(Icons::Configure));
     ui->tabWidget->setTabIcon(TabDatabase, icons.icon(Icons::Database));
-    ui->tabWidget->setTabIcon(TabFilter, icons.icon(Icons::Filter));
+    //ui->tabWidget->setTabIcon(TabFilter, icons.icon(Icons::Filter));
 }
 
 void DialogSettings::loadSettings(const Settings &settings)
@@ -81,11 +77,9 @@ void DialogSettings::loadSettings(const Settings &settings)
     updateLabelDatabaseFilename();
 
     // Tab Filter
-    setFilterRule(settings.filter);
-
-    // Select open Tab
-    Tabs curTab = ui->inputExtensions->text().isEmpty() ? TabMain : TabFilter;
-    ui->tabWidget->setCurrentIndex(curTab);
+    //setFilterRule(settings.filter);
+    ui->ignoreDbFiles->setChecked(settings.filter.ignoreDbFiles);
+    ui->ignoreShaFiles->setChecked(settings.filter.ignoreShaFiles);
 }
 
 void DialogSettings::updateSettings()
@@ -113,26 +107,8 @@ void DialogSettings::updateSettings()
     settings_->dbFlagConst = ui->cbDbFlagConst->isChecked();
 
     // filters
-    cleanUpExtList();
-    settings_->filter = getCurrentFilter();
-}
-
-QStringList DialogSettings::extensionsList() const
-{
-    if (ui->inputExtensions->text().isEmpty())
-        return QStringList();
-
-    QString _inputed = ui->inputExtensions->text().toLower();
-    _inputed.remove('*');
-    _inputed.replace(" ."," ");
-    _inputed.replace(' ',',');
-
-    if (_inputed.startsWith('.'))
-        _inputed.remove(0, 1);
-
-    QStringList ext = _inputed.split(',', Qt::SkipEmptyParts);
-    ext.removeDuplicates();
-    return ext;
+    settings_->filter.ignoreDbFiles = ui->ignoreDbFiles->isChecked();
+    settings_->filter.ignoreShaFiles = ui->ignoreShaFiles->isChecked();
 }
 
 void DialogSettings::updateLabelDatabaseFilename()
@@ -147,123 +123,6 @@ void DialogSettings::updateLabelDatabaseFilename()
 void DialogSettings::restoreDefaults()
 {
     loadSettings(defaults);
-}
-
-void DialogSettings::setExtensionsColor()
-{
-    ui->inputExtensions->setStyleSheet(format::coloredText(QStringLiteral(u"QLineEdit"), ui->radioButtonIgnore->isChecked()));
-}
-
-void DialogSettings::setComboBoxFpIndex()
-{
-    setComboBoxFpIndex(getCurrentFilter());
-}
-
-void DialogSettings::setComboBoxFpIndex(const FilterRule &filter)
-{
-    FilterPreset preset = PresetCustom;
-    const QStringList _ext = filter.extensionList();
-
-    if (filter.isFilter(FilterRule::Include)) {
-        if (_ext == listPresetDocuments)
-            preset = PresetDocuments;
-        else if (_ext == listPresetPictures)
-            preset = PresetPictures;
-        else if (_ext == listPresetMusic)
-            preset = PresetMusic;
-        else if (_ext == listPresetVideos)
-            preset = PresetVideos;
-    }
-    else if (filter.isFilter(FilterRule::Ignore)) {
-        if (_ext == listPresetIgnoreTriflings)
-            preset = PresetIgnoreTriflings;
-    }
-
-    ui->comboBoxPresets->setCurrentIndex(preset);
-}
-
-void DialogSettings::setFilterRule(const FilterRule &filter)
-{
-    const QString _exts = filter.extensionString(QStringLiteral(u" "));
-    ui->inputExtensions->setText(_exts);
-    filter.isFilter(FilterRule::Include) ? ui->rbInclude->setChecked(true) : ui->radioButtonIgnore->setChecked(true);
-
-    ui->ignoreDbFiles->setChecked(filter.ignoreDbFiles);
-    ui->ignoreShaFiles->setChecked(filter.ignoreShaFiles);
-
-    setExtensionsColor();
-    setComboBoxFpIndex(filter);
-}
-
-void DialogSettings::setFilterPreset(int presetIndex)
-{
-    if (presetIndex > PresetCustom)
-        setFilterRule(selectPresetFilter(static_cast<FilterPreset>(presetIndex)));
-}
-
-FilterRule DialogSettings::selectPresetFilter(const FilterPreset preset)
-{
-    switch (preset) {
-    case PresetDocuments:
-        return FilterRule(FilterRule::Include, listPresetDocuments);
-    case PresetPictures:
-        return FilterRule(FilterRule::Include, listPresetPictures);
-    case PresetMusic:
-        return FilterRule(FilterRule::Include, listPresetMusic);
-    case PresetVideos:
-        return FilterRule(FilterRule::Include, listPresetVideos);
-    case PresetIgnoreTriflings:
-        return FilterRule(FilterRule::Ignore, listPresetIgnoreTriflings);
-    default:
-        return FilterRule();
-    }
-}
-
-FilterRule DialogSettings::getCurrentFilter() const
-{
-    FilterRule curFilter;
-    curFilter.ignoreDbFiles = ui->ignoreDbFiles->isChecked();
-    curFilter.ignoreShaFiles = ui->ignoreShaFiles->isChecked();
-
-    if (!ui->inputExtensions->text().isEmpty()) {
-        FilterMode _mode = ui->radioButtonIgnore->isChecked() ? FilterMode::Ignore
-                                                              : FilterMode::Include;
-        curFilter.setFilter(_mode, extensionsList());
-    }
-
-    return curFilter;
-}
-
-void DialogSettings::handleFilterMode()
-{
-    const bool isInculde = ui->rbInclude->isChecked();
-
-    ui->ignoreDbFiles->setDisabled(isInculde);
-    ui->ignoreShaFiles->setDisabled(isInculde);
-
-    setExtensionsColor();
-    setComboBoxFpIndex();
-}
-
-void DialogSettings::cleanUpExtList()
-{
-    QStringList _exts = extensionsList();
-    if (!_exts.isEmpty()) {
-        QStringList list;
-        if (!ui->rbInclude->isChecked()) {
-            if (ui->ignoreShaFiles->isChecked())
-                list.append(Lit::sl_digest_exts); // { "sha1", "sha256", "sha512" }
-            if (ui->ignoreDbFiles->isChecked())
-                list.append(Lit::sl_db_exts); // { "ver.json", "ver" }
-        }
-
-        if (!list.isEmpty()) {
-            foreach (const QString &str, list) {
-                _exts.removeOne(str);
-            }
-            ui->inputExtensions->setText(_exts.join(','));
-        }
-    }
 }
 
 DialogSettings::~DialogSettings()
