@@ -225,82 +225,10 @@ to prevent changes from being made.</string>
      </widget>
      <widget class="QWidget" name="tabFilter">
       <attribute name="title">
-       <string>Permanent Filter</string>
+       <string>Filter</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="1" column="2" colspan="2">
-        <widget class="QFrame" name="frame_2">
-         <property name="frameShape">
-          <enum>QFrame::Shape::StyledPanel</enum>
-         </property>
-         <property name="frameShadow">
-          <enum>QFrame::Shadow::Raised</enum>
-         </property>
-         <layout class="QHBoxLayout" name="horizontalLayout_3">
-          <item>
-           <widget class="QRadioButton" name="radioButtonIgnore">
-            <property name="text">
-             <string>Ignore</string>
-            </property>
-            <property name="checked">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="rbInclude">
-            <property name="text">
-             <string>Include</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer">
-            <property name="orientation">
-             <enum>Qt::Orientation::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item row="2" column="1" colspan="3">
-        <widget class="QLineEdit" name="inputExtensions">
-         <property name="toolTip">
-          <string>Extensions list separated by spaces</string>
-         </property>
-         <property name="placeholderText">
-          <string>log jpg docx mkv</string>
-         </property>
-         <property name="clearButtonEnabled">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="2" colspan="2">
-        <widget class="QCheckBox" name="ignoreShaFiles">
-         <property name="toolTip">
-          <string>Exclude digest files from the list</string>
-         </property>
-         <property name="text">
-          <string>Ignore *.sha1/256/512 files</string>
-         </property>
-        </widget>
-       </item>
        <item row="1" column="1">
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>Filter files by extensions:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="1">
         <widget class="QCheckBox" name="ignoreDbFiles">
          <property name="toolTip">
           <string>Exclude *.ver and *.ver.json files from the filelist</string>
@@ -310,21 +238,15 @@ to prevent changes from being made.</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="1">
-        <spacer name="verticalSpacer_2">
-         <property name="orientation">
-          <enum>Qt::Orientation::Vertical</enum>
+       <item row="1" column="2" colspan="2">
+        <widget class="QCheckBox" name="ignoreShaFiles">
+         <property name="toolTip">
+          <string>Exclude digest files from the list</string>
          </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
+         <property name="text">
+          <string>Ignore *.sha1/256/512 files</string>
          </property>
-        </spacer>
-       </item>
-       <item row="0" column="1" colspan="3">
-        <widget class="QComboBox" name="comboBoxPresets"/>
+        </widget>
        </item>
       </layout>
      </widget>
